static first pass

--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,3 +1,4 @@
+{{define "footer"}}
 <div class="container">
     <footer class="footer">
     <p>Postman <b>{{.appVersion}}</b> Build <b>{{.appBuild}}</b></p>
@@ -12,3 +13,4 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 </body>
 </html>
+{{end}}
