--- a/assets/html/header.html
+++ b/assets/html/header.html
@@ -1,3 +1,4 @@
+{{define "header"}}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -39,7 +40,7 @@
 
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/">Dashboard</a>
                 </li>
                 <li class="nav-item">
@@ -49,3 +50,4 @@
             </div>
         </div>
     </nav>
+{{end}}
