--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,4 +1,4 @@
-{{template "header.html" .}}
+{{template "header" .}}
 <div class="container">
 
     <div class="starter-template">
@@ -65,4 +65,4 @@
 
     
 </div><!-- /.container -->
-{{template "footer.html" .}}
+{{template "footer" .}}
