--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,4 +1,4 @@
-{{template "header" .}}
+{{template "header.html" .}}
 <div class="container">
 
     <div class="starter-template">
@@ -85,4 +85,4 @@
 
     
 </div><!-- /.container -->
-{{template "footer" .}}
+{{template "footer.html" .}}
